--- a/src/main/res/menu/main_menu.xml
+++ b/src/main/res/menu/main_menu.xml
@@ -5,7 +5,7 @@
       android:title="Search"
       app:showAsAction="always|collapseActionView"
       app:actionViewClass="androidx.appcompat.widget.SearchView"
-      android:icon="@drawable/user">
+      android:icon="@drawable/searchicon">
 
 </item>
 </menu>
